--- a/css/style1.css
+++ b/css/style1.css
@@ -13,14 +13,6 @@ html {
   background-size: 80%;
 }
 body {
-  width: 1250px;
-  /* height: 800px; */
-  margin: 0 auto;
-  /* border-right: 2px solid black;
-  border-left: 2px solid black; */
-  /* border: 2px solid black; */
-  /* background-color: blanchedalmond; */
-  /* background-color: black; */
 }
 a:link {
   text-decoration: none;
@@ -29,6 +21,10 @@ a:link {
 a:visited {
   text-decoration: none;
   color: black;
+}
+#main {
+  width: 1250px;
+  margin: 0 auto;
 }
 #header {
   /* position: absolute; */
@@ -249,11 +245,13 @@ a:visited {
   text-align: center;
   /* margin-top: 100px; */
   font-weight: bold;
+  background-color: #f5f5f5;
   background-color: white;
   box-shadow: 0px 20px 20px -20px #5e5e5e;
 }
 #container #producedetail h1 {
   font-size: 50px;
+  /* padding-top: 70px; */
 }
 #container #producedetail p {
   padding: 30px;
@@ -270,6 +268,7 @@ a:visited {
 #container #producedetail .producedetailcontent {
   margin-top: 80px;
   /* margin: 20px auto; */
+  height: 500px;
 }
 #container #producedetail .producedetailcontent .line1 {
   /* width: 1000px; */
@@ -315,30 +314,45 @@ a:visited {
   font-size: 14px;
   padding: 8px 16px;
 }
+.howtouseup {
+  width: 1250px;
+  height: 100px;
+  background-color: white;
+}
 #container #howtouse {
   width: 1250px;
-  height: 800px;
+  height: 1200px;
   box-shadow: 0px 20px 20px -20px #5e5e5e;
-  /* opacity: 0;
-  position: relative; */
-  /* z-index: -1; */
-  /* background-color: black;
-  opacity: 0.5; */
+  text-align: center;
+}
+#container #howtouse .howtousehead {
+  background-color: white;
+}
+#container #howtouse .howtousehead h1 {
+  font-size: 50px;
+}
+#container #howtouse .howtousehead p {
+  padding: 30px;
+  font-size: 16px;
+  font-weight: normal;
+}
+#container #howtouse .howtousehead hr {
+  width: 50px;
+  height: 6px;
+  border: none;
+  border-top: 5px solid #33bde5;
+  margin: 0 auto;
+  padding-bottom: 80px;
 }
 #container #howtouse .howtousecontent {
   width: 1250px;
-  height: 800px;
+  height: 1200px;
   /* float: right; */
   background-color: black;
   opacity: 0.5;
   position: relative;
   z-index: -999;
   margin-top: -41px;
-}
-#container #howtouse h1 {
-  padding-top: 50px;
-  font-size: 50px;
-  color: white;
 }
 .aboutusup {
   width: 1250px;
@@ -403,7 +417,7 @@ a:visited {
   padding: 10px 0px 0px 10px;
   /* margin: 10px 0px 0px 10px; */
 }
-#container #aboutus .aboutuspicgroup > *{
+#container #aboutus .aboutuspicgroup > * {
   /* overflow: hidden; */
 }
 #container #aboutus .aboutuspicgroup > * > img:hover {
@@ -411,24 +425,77 @@ a:visited {
   opacity: 0.7;
 }
 #container #joinus {
+  height: 900px;
+  background-color: white;
+  text-align: center;
+}
+#container #joinus h1 {
+  font-size: 50px;
+}
+#container #joinus p {
+  padding: 30px;
+  font-size: 16px;
+  font-weight: normal;
+}
+#container #joinus hr {
+  width: 50px;
+  height: 6px;
+  border: none;
+  border-top: 5px solid #33bde5;
+  margin: 0 auto;
+  padding-bottom: 80px;
+}
+#container #joinus .joinuscontent {
+  height: 400px;
+}
+#container #joinus .joinuscontent > * {
+  width: 252px;
+  height: 350px;
+  float: left;
+  text-align: left;
+  margin: 10px 20px 10px 20px;
+  border: 4px solid #f6f6f6;
+  border-bottom: 4px solid #33bde5;
+}
+#container #joinus .joinuscontent .joinuscontentleft {
+  margin-left: 50px;
+}
+#container #joinus .joinuscontent > * > svg {
+  padding: 50px 30px 30px 30px;
+}
+#container #joinus .joinuscontent > * > .joinuscontenttext {
+  /* width: 260px; */
+}
+#container #joinus .joinuscontent > * > .joinuscontenttext > h5 {
+  font-size: 16px;
+  padding: 0 30px 15px 30px;
+}
+#container #joinus .joinuscontent > * > .joinuscontenttext > p {
+  font-size: 15px;
+  padding: 0;
+  padding: 0 30px;
+}
+#container #joinus .joinussub {
   width: 1250px;
   height: 300px;
   background-color: #f6f6f6;
 }
-#container #joinus .joinusleft {
+#container #joinus .joinussub .joinusleft {
   width: 480px;
   float: left;
   margin-top: 80px;
   margin-left: 100px;
+  text-align: left;
 }
-#container #joinus .joinusleft .joinuslefttitle {
+#container #joinus .joinussub .joinusleft .joinuslefttitle {
   font-size: 14px;
 }
-#container #joinus .joinusleft .joinuslefttext {
+#container #joinus .joinussub .joinusleft .joinuslefttext {
   font-size: 14px;
   font-weight: normal;
+  padding: 0;
 }
-#container #joinus .joinusleft .joinuslefttextbox {
+#container #joinus .joinussub .joinusleft .joinuslefttextbox {
   border: none;
   font-size: 18px;
   /* height: ; */
@@ -438,7 +505,7 @@ a:visited {
   /* line-height: 24px; */
   margin-top: 5px;
 }
-#container #joinus .joinusleft .joinusleftckbutton {
+#container #joinus .joinussub .joinusleft .joinusleftckbutton {
   border: 2px solid #33bde5;
   font-size: 16px;
   width: 128px;
@@ -449,11 +516,16 @@ a:visited {
   background-color: #33bde5;
   color: white;
   margin-top: 15px;
+  font-weight: bold;
 }
-#container #joinus .joinusleft .joinusleftckbutton:hover {
+#container #joinus .joinussub .joinusleft .joinusleftckbutton p {
+  padding: 0;
+}
+#container #joinus .joinussub .joinusleft .joinusleftckbutton:hover {
   /* color: #33bde5;
   background-color: white; */
-  font-weight: 700;
+  font-weight: bold;
+  /* font-size: 20px; */
 }
 .footerup {
   height: 20px;
