--- a/css/style1.css
+++ b/css/style1.css
@@ -252,6 +252,7 @@ a:visited {
 #container #producedetail h1 {
   font-size: 50px;
   /* padding-top: 70px; */
+  padding-top: 70px;
 }
 #container #producedetail p {
   padding: 30px;
@@ -321,7 +322,7 @@ a:visited {
 }
 #container #howtouse {
   width: 1250px;
-  height: 1305px;
+  height: 1600px;
   /* box-shadow: 0px 20px 20px -20px #5e5e5e; */
   text-align: center;
 }
@@ -330,6 +331,7 @@ a:visited {
 }
 #container #howtouse .howtousehead h1 {
   font-size: 50px;
+  padding-top: 70px;
 }
 #container #howtouse .howtousehead p {
   padding: 30px;
@@ -346,7 +348,7 @@ a:visited {
 }
 #container #howtouse .howtousecontent {
   width: 1250px;
-  height: 1200px;
+  /* height: 1200px; */
   /* float: right; */
   /* background-color: black;
   opacity: 0.5;
@@ -359,7 +361,7 @@ a:visited {
   position: relative;
   z-index: 3;
   height: 423px;
-  margin-top: 700px;
+  margin-top: 910px;
   background-color: white;
   /* overflow: hidden; */
   box-shadow: 0px 20px 20px -20px #5e5e5e;
@@ -429,30 +431,36 @@ a:visited {
 }
 #container #aboutus {
   width: 1250px;
-  height: 1000px;
+  /* height: 1000px; */
   background-color: white;
   text-align: center;
   box-shadow: 0px 20px 20px -20px #5e5e5e;
 }
-#container #aboutus h1 {
-  font-size: 50px;
+#container #aboutus .aboutushead{
+  background-color: white;
 }
-#container #aboutus p {
+#container #aboutus .aboutushead h1 {
+  font-size: 50px;
+  padding-top: 70px;
+}
+#container #aboutus .aboutushead p {
   padding: 30px;
   font-size: 16px;
   font-weight: normal;
 }
-#container #aboutus hr {
+#container #aboutus .aboutushead hr {
   width: 50px;
   height: 6px;
   border: none;
   border-top: 5px solid #33bde5;
   margin: 0 auto;
+  padding-bottom: 80px;
 }
 #container #aboutus .aboutuspicgroup {
-  margin-top: 80px;
-  width: 1250px;
+  /* margin-top: 80px; */
+  /* width: 1250px; */
   /* overflow: hidden; */
+  height: 710px;
 }
 #container #aboutus .aboutuspicgroup .aboutusleft {
   float: left;
@@ -492,13 +500,18 @@ a:visited {
   /* transform: scale(1.1); */
   opacity: 0.7;
 }
+.joinusup{
+  background-color: white;
+  height: 100px;
+}
 #container #joinus {
-  height: 900px;
+  /* height: 900px; */
   background-color: white;
   text-align: center;
 }
 #container #joinus h1 {
   font-size: 50px;
+  padding-top: 70px;
 }
 #container #joinus p {
   padding: 30px;
